<resources>
    <string name="agendaTitle">Agenda</string>
    <string name="showDetails">Show Details</string>
    <string name="backToTop">Back to top</string>
    <string name="sendFeedback">Send feedback</string>
    <string name="title_activity_events">Current Event</string>
    <string name="title_activity_login">Sign in</string>
    <string name="attend"> Attend </string>
    <string name="app_name">DevCon</string>
    <string name="welcome"> Welcome </string>
    <string name="speechDetails"> View Details</string>
    <string name="unit_time"> hrs </string>
    <string name="menuItem_allEvents"> View all Events</string>

    <!-- Strings related to login -->
    <string name="prompt_userName">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings creating new Speech-->
    <string name="speech_title_label">Title of Speech: </string>
    <string name="addSpeechTitle"> Add new speech </string>
    <string name="speechTitleHint"> enter speech title... </string>
    <string name="speechStartTimeHint"> enter start time...</string>
    <string name="speech_startTime_label">Start time:</string>
    <string name="speech_endTime_label">End Time:</string>
    <string name="speechEndTimeHint">enter end time...</string>
    <string name="saveSpeech">Save</string>
    <string name="cancelSpeech">Cancel</string>
    <string name="speechLocation">Location: </string>


    <!-- Strings creating new Event-->
    <string name="event_name_label">Name of Event </string>
    <string name="addEventName"> Add new event </string>
    <string name="eventPlaceHint"> enter event place... </string>
    <string name="eventNameHint"> enter event name...</string>
    <string name="eventPlace_label"> enter event place... </string>
    <string name="eventName_label_"> enter event name...</string>
    <string name="createEvent_title">Create new Event</string>

    <!-- Strings for showing list of all Events-->
    <string name="allEvents_title"> All Events </string>
    <string name="info_noEvent">Sorry, there are no conferences planned at the moment. For adding a new conference click on \'+\'.</string>
    <string name="newEvent_label_date">Date:</string>
    <string name="warning_speechColliding">The times entered for this speech collide with another speech. Please check and change the start/end time.</string>
    <string name="speech_endBeforeStartTime">Your input is incorrect. Please check (start time cannot be after end time/fields cannot be empty)! </string>
    <string name="event_validationErrorDate">The date you entered is either in the past or there is already an event on that date. Please check.</string>
    <string name="info_noSpeech">There are no speeches at this moment. For adding speeches click on \'+\'.</string>
    <string name="event_validationErrorInput">Name field cannot be empty! Please enter a name for the event.</string>
    <string name="warning_NoInput">Fields cannot be empty!</string>

    <!-- Strings for Speeches -->
    <string name="speechRate">Rate now:</string>
    <string name="speechRated">You have rated this speech.</string>

    <!-- Strings for rating Event -->
    <string name="submitRating"> Submit </string>
    <string name="cancelRating"> Cancel </string>
    <string name="rateEvent">Rate the whole event here...</string>
    <string name="labelRatingComment">Your comment</string>
    <string name="title_activity_ip">Enter IP addresses</string>

    <!-- Strings related to login -->

    <string name="save_ips">Save IPs</string>
    <string name="ipEvent">Enter event service IP</string>
    <string name="ipUser">Enter user service IP</string>
    <string name="ipRating">Enter rating service IP</string>
    <string name="titleSpeechRating">Rate this speech:</string>
    <string name="btn_rateSpeech">Rate</string>

</resources>
