<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    android:columnCount="4">

    <TextView
        android:text="@string/addSpeechTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addSpeechTitle"
        android:textSize="32dip"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/speechTitle_label"
        tools:text="@string/speech_title_label"
        android:layout_gravity="right" />

    <EditText
        android:id="@+id/speechTitle"
        android:ems="10"
        android:hint="@string/speechTitleHint"/>

    <TextView
        android:layout_height="28dp"
        android:id="@+id/speechStartTime_label"
        tools:text="@string/speech_startTime_label"
        android:layout_gravity="right"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:id="@+id/startTime"
        android:ems="8"
        android:hint="@string/speechStartTimeHint"/>

    <TextView
        android:layout_height="28dp"
        android:id="@+id/speechEndTime_label"
        tools:text="@string/speech_endTime_label"
        android:layout_gravity="right"
        android:layout_row="3"
        android:layout_column="0" />

    <EditText
        android:id="@+id/endTime"
        android:ems="8"
        android:hint="@string/speechEndTimeHint"/>


</GridLayout>